added random calcs

--- a/esm204_hw3.Rmd
+++ b/esm204_hw3.Rmd
@@ -124,3 +124,17 @@ env_cost_local_1 = Q_eq*1.5
 env_cost_global_1 = Q_eq*0.5
 ```
 
+```{r}
+## random calculations to get aggregate MWTP equation
+q_int <- (b_L - b_H)/(a_H)
+
+agg_slope <- (a_L*a_H)/(a_L+a_H)
+agg_int <- ((a_L*b_H) + (b_L*a_H))/(a_L+a_H)
+
+# calc for supply curve equation
+supply_slope <- P_eq/Q_eq
+
+# finding total cost to consumers
+con.cost <- P_eq*Q_eq 
+```
+
